created add task form

--- a/src/main/java/com/example/todo/views/styles.css
+++ b/src/main/java/com/example/todo/views/styles.css
@@ -12,3 +12,24 @@ body {
 .header {
     text-align: center;
 }
+
+#mainContainer {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.flexForm {
+    display: flex
+}
+
+.flex1{
+    flex: 1;
+}
+
+input {
+    height: 25px;
+    border-radius: 4px;
+    margin-right: 18px;
+}
+
+
