--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -10,5 +10,15 @@
 <body>
     <h1 class="header"> Things To Do!</h1>
     <h3 class="header"> &gt;-----------&lt;&gt;-----------&lt;</h3>
+
+
+
+    <div id="mainContainer">  
+        <form class="flexForm">
+            <input class="flex1" placeholder="Todo task..." type="text">
+            <input type="submit" value="Add Task">
+        </form>    
+    </div>
+
 </body>
 </html>
