created search form

--- a/src/main/java/com/example/todo/views/styles.css
+++ b/src/main/java/com/example/todo/views/styles.css
@@ -32,4 +32,12 @@ input {
     margin-right: 18px;
 }
 
+.defaultVerticalSpacing {
+    padding-top: 25px;
+}
+
+.todoSearch {
+    background: url("https://static.thenounproject.com/png/101791-200.png") no-repeat right;
+    background-size: 25px;
+}
 
