--- a/src/main/java/com/example/todo/views/styles.css
+++ b/src/main/java/com/example/todo/views/styles.css
@@ -18,4 +18,19 @@ body {
     padding-right: 25px;
 }
 
+.flexForm {
+    display: flex
+}
+
+.flex1{
+    flex: 1;
+}
+
+input {
+    height: 25px;
+    border-radius: 4px;
+    margin-right: 18px;
+}
+
+
 
