--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -14,11 +14,12 @@
 
 
     <div id="mainContainer">  
-        <form>
-            <input  placeholder="Todo task..." type="text">
+        <form class="flexForm">
+            <input class="flex1" placeholder="Todo task..." type="text">
             <input type="submit" value="Add Task">
         </form>   
     </div>
 
 </body>
 </html>
+
