--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -18,8 +18,12 @@
             <input class="flex1" placeholder="Todo task..." type="text">
             <input type="submit" value="Add Task">
         </form>   
+        
+        <form class="flexForm defaultVerticalSpacing">
+            <input class="flex1 todoSearch" type="search" placeholder="Search"/>
+        </form>
+        
     </div>
 
 </body>
 </html>
-
