--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -23,6 +23,20 @@
             <input class="flex1 todoSearch" type="search" placeholder="Search"/>
         </form>
         
+        <ul class="defaultVerticalSpacing todoList">
+            <li>
+                <span>&#x2610</span>
+                <span class="listItemDescriptionStyle">Placeholder TODO Item</span>
+                <span>X</span>
+            </li>
+
+            <li class="checked">
+                <span>&#x2611</span>
+                <span class="listItemDescriptionStyle">Placeholder TODO Item slightly longer </span>
+                <span>X</span>
+            </li>
+        </ul>
+        
     </div>
 
 </body>
