created fetch api

--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -8,7 +8,7 @@
     <script src="myScript.js"></script> 
     <title>My Todo App!</title>
 </head>
-<body onload="fetchTodoTasks()">
+<body>
     <h1 class="header"> Things To Do!</h1>
     <h3 class="header"> &gt;-----------&lt;&gt;-----------&lt;</h3>
 
