--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="myScript.js"></script>
     <title>My Todo App!</title>
 </head>
-<body>
+<body onload="fetchTodoTasks()">
     <h1 class="header"> Things To Do!</h1>
     <h3 class="header"> &gt;-----------&lt;&gt;-----------&lt;</h3>
 
