redered task elements

--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -24,7 +24,7 @@
             <input class="flex1 todoSearch" type="search" placeholder="Search"/>
         </form>
         
-        <ul id="todoList" class="defaultVerticalSpacing todoList">
+        <ul class="defaultVerticalSpacing todoList">
             <li>
                 <span>&#x2610</span>
                 <span class="listItemDescriptionStyle">Placeholder TODO Item</span>
