called create new task api

--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -15,8 +15,8 @@
 
 
     <div id="mainContainer">  
-        <form class="flexForm" onsubmit="return submitNewTodoTaskForm(this)">
-            <input name="newItemDescription" class="flex1" placeholder="Todo task..." type="text">
+        <form class="flexForm">
+            <input class="flex1" placeholder="Todo task..." type="text">
             <input type="submit" value="Add Task">
         </form>   
         
