added search api

--- a/src/main/java/com/example/todo/views/todoPage.html
+++ b/src/main/java/com/example/todo/views/todoPage.html
@@ -21,7 +21,7 @@
         </form>   
         
         <form class="flexForm defaultVerticalSpacing">
-            <input onkeyup="searchTodoTasks(this)" class="flex1 todoSearch" type="search" placeholder="Search"/>
+            <input class="flex1 todoSearch" type="search" placeholder="Search"/>
         </form>
         
         <ul id="todoList" class="defaultVerticalSpacing todoList">
