created onticboxToggled method

--- a/src/main/java/com/example/todo/views/styles.css
+++ b/src/main/java/com/example/todo/views/styles.css
@@ -70,3 +70,8 @@ ul li.checked span.listItemDescriptionStyle {
     color:gray;
     text-decoration: line-through;
 }
+
+.tickIconStyle {
+    cursor: pointer;
+}
+
