added delete functionality

--- a/src/main/java/com/example/todo/views/styles.css
+++ b/src/main/java/com/example/todo/views/styles.css
@@ -71,6 +71,6 @@ ul li.checked span.listItemDescriptionStyle {
     text-decoration: line-through;
 }
 
-.tickIconStyle {
+.pointerIconStyle {
     cursor: pointer;
 }
